# fusion_bench

./: .env.template  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  calculate_cofficient.py  calculate_matrix.py  fix_merge_weight.sh  index.html  merging_weights.pt  mkdocs.yml  objects.inv  offline_mode.sh  pyproject.toml  requirements.txt  set_cache_dir.sh  setup.py  switchlocalproxy.ps1  switchlocalproxy.sh  t.py  tie_merge.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_zh.md  config.yml  feature_request.md  feature_request_zh.md  question.md  question_zh.md
.github/workflows/: gh-deploy.yml  image-compression.yml  publish.yml
algorithms/: index.html
algorithms/ada_svd/: index.html
algorithms/adamerging/: index.html
algorithms/analysis_tools/: index.html
algorithms/bitdelta/: index.html
algorithms/classification_finetune/: index.html
algorithms/concrete_subspace/: index.html
algorithms/dare/: index.html
algorithms/dawe/: index.html
algorithms/depth_upscaling/: index.html
algorithms/doge_ta/: index.html
algorithms/dop/: index.html
algorithms/dummy/: index.html
algorithms/emr_merging/: index.html
algorithms/expert_sparsity/: index.html
algorithms/fisher_merging/: index.html
algorithms/fw_merging/: index.html
algorithms/gossip/: index.html
algorithms/isotropic_merging/: index.html
algorithms/layer_recombination/: index.html
algorithms/linear/: index.html
algorithms/lm_finetune/: index.html
algorithms/max-model_predictor/: index.html
algorithms/model_recombination/: index.html
algorithms/model_stitching/: index.html
algorithms/model_stock/: index.html
algorithms/moe_based_merging/: index.html
algorithms/moe_based_upscaling/: index.html
algorithms/moe_pruner/: index.html
algorithms/opcm/: index.html
algorithms/pwe_moe/: index.html
algorithms/randes/: index.html
algorithms/rankone_moe/: index.html
algorithms/regmean/: index.html
algorithms/regmean_plusplus/: index.html
algorithms/simple_averaging/: index.html
algorithms/simple_ensemble/: index.html
algorithms/singular_value_calibration/: index.html
algorithms/slerp/: index.html
algorithms/smile_upscaling/: index.html
algorithms/sparselo_pruning/: index.html
algorithms/specification_ensemble/: index.html
algorithms/surgery/: index.html
algorithms/tall_mask/: index.html
algorithms/task_arithmetic/: index.html
algorithms/task_singular_vector/: index.html
algorithms/ties_merging/: index.html
algorithms/trust_region/: index.html
api/: index.html
api/fusion_bench.optim/: index.html
config/: .gitignore  README.md  adamerging.yaml  clip-vit-base-patch32_robustness_corrupted.yaml  clip-vit-base_patch32_robustness_corrupted.yaml  example_config.yaml  fabric_model_fusion.yaml  gossip.yaml  index.html  llama_full_finetune.yaml  llama_magnitude_pruning.yaml  llama_model_fusion.yaml  llama_weighted_average.yaml  model_fusion.yaml  nyuv2_config.yaml  nyuv2_mtl_train.yaml
css/: material_extra.css  mkdocstrings.css
docs/: .gitignore  README.md  index.md  introduction_to_model_fusion.md  supported_algorithms.md
examples/: README.md  clip-vit_individual.sh  count_parameters.ipynb  logger_selection_example.py  moe_based_upscaling.ipynb  pyinstrument_profiling_example.py  run_model_combinations.py
fusion_bench/: __init__.py  __main__.py
fusion_bench_config/: llama_model_fusion.yaml
get_started/: index.html
introduction_to_model_fusion/: index.html
modelpool/: index.html
readinglist/: index.html
search/: search_index.json
supported_algorithms/: index.html
taskpool/: index.html
tests/: README.md  import_profile.py  simple_average.py  test_depth_upscaling.py  test_model_recombination.py  test_simple_average.py  test_subspace_boosting.py  test_weighed_ensemble.py
(+1863 files in other folders)
