[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion_bench"
description = "A Comprehensive Benchmark of Deep Model Fusion"
readme = "README.md"
version = "0.2.16"
authors = [{ name = "Anke Tang", email = "tang.anke@foxmail.com" }]
license = { file = 'LICENSE' }
requires-python = ">= 3.10"
dependencies = [
    "hydra-core",
    "lightning",
    "transformers",
    "datasets",
    "peft",
    "huggingface_hub",
    "matplotlib",
    "tensorboard",
    "tqdm",
    "rich",
    "scipy",
    "h5py",
    "pytest"
]
keywords = ["deep learning", "model fusion", "benchmark"]

[project.urls]
Repository = "https://github.com/tanganke/fusion_bench"
Homepage = "https://github.com/tanganke/fusion_bench"
Issues = "https://github.com/tanganke/fusion_bench/issues"

[project.scripts]
fusion_bench = "fusion_bench.scripts.cli:main"
fusion_bench_webui = "fusion_bench.scripts.webui:main"

[tool.setuptools]
include-package-data = true
package-dir = { "fusion_bench" = "fusion_bench" }

[tool.setuptools.package-data]
fusion_bench = ['../fusion_bench_config/**/*']

[tool.isort]
profile = "black"

[project.optional-dependencies]
lm-eval-harness = ["lm-eval"]
